Implementing authentication and authorization feature
