# src/API/HR.LeaveManagement.Api/Controllers/AuthController.cs
@@ -1,0 +1,32 @@
+using HR.LeaveManagement.Application.Contracts.Identity;
+using HR.LeaveManagement.Application.Models.Identity;
+
+using Microsoft.AspNetCore.Mvc;
+
+namespace HR.LeaveManagement.Api.Controllers;
+
+[Route("api/[controller]")]
+[ApiController]
+public class AuthController : ControllerBase
+{
+    private readonly IAuthService _authService;
+
+    public AuthController(IAuthService authService)
+    {
+        _authService = authService;
+    }
+
+    [HttpPost("Login")]
+    public async Task<ActionResult<AuthResponse>> Login(AuthRequest request)
+    {
+        var response = await _authService.Login(request);
+        return Ok(response);
+    }
+
+    [HttpPost("Register")]
+    public async Task<ActionResult<RegistrationResponse>> Register(RegistrationRequest request)
+    {
+        var response = await _authService.Register(request);
+        return Ok(response);
+    }
+}
