# src/Core/HR.LeaveManagement.Application/Models/Identity/AuthResponse.cs
@@ -1,0 +1,9 @@
+namespace HR.LeaveManagement.Application.Models.Identity;
+
+public class AuthResponse
+{
+    public string Id { get; set; } = string.Empty;
+    public string UserName { get; set; } = string.Empty;
+    public string Email { get; set; } = string.Empty;
+    public string Token { get; set; } = string.Empty;
+}
