# src/Infrastructure/HR.LeaveManagement.Identity/Models/ApplicationUser.cs
@@ -1,0 +1,9 @@
+using Microsoft.AspNetCore.Identity;
+
+namespace HR.LeaveManagement.Identity.Models;
+
+public class ApplicationUser : IdentityUser
+{
+    public string FirstName { get; set; } = string.Empty;
+    public string LastName { get; set; } = string.Empty;
+}
